MOS-25364: CHANGING CSS PROPERTY TO FIX SHIFTING DIV ISSUE
Former-commit-id: 071a8f0113585c48610440df21ceb580b3dd8561
Former-commit-id: 2da612b7e484cc317e6444f3b4453a58ace15d00

--- a/pre-registration/pre-registration-ui/src/app/feature/booking/time-selection/time-selection.component.css
+++ b/pre-registration/pre-registration-ui/src/app/feature/booking/time-selection/time-selection.component.css
@@ -57,6 +57,7 @@
     border-top: 1px solid #ff4081;
     margin-right: 20px;
     padding: 0;
+    min-width:74%;
 }
 
 .time-selection__names-container {
